--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "nodemon": "^2.0.7",
-    "webpack": "^4.46.0",
+    "webpack": "^5.57.1",
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
